added secrets "AKIAEXAMPLE1234567890"

--- a/MySampleApp/appsettings.Development.json
+++ b/MySampleApp/appsettings.Development.json
@@ -4,5 +4,6 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
-  }
+  },
+  "aws_secret_access_key": "AKIAEXAMPLE1234567890"
 }
