--- a/MySampleApp/appsettings.json
+++ b/MySampleApp/appsettings.json
@@ -5,5 +5,6 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "aws_secret_access_key": "AKIAEXAMPLE1234567890"
 }
