--- a/MySampleApp/appsettings.json
+++ b/MySampleApp/appsettings.json
@@ -6,5 +6,6 @@
     }
   },
   "AllowedHosts": "*",
-  "aws_secret_access_key": "AKIAEXAMPLE1234567890"
+  "AWS_ACCESS_KEY_ID": "AKIAIOSFODNN7EXAMPLE",
+  "AWS_SECRET_ACCESS_KEY": "wJalrXUtnFEMI/K7MDENG/bPxRfiCYEXAMPLEKEY"
 }
